# aos-mcp

./: .gitignore  README.md  justfile
aos_mcp/: Dockerfile  README.md  justfile  pyproject.toml
aos_mcp/data/: mcp_tools.yaml
aos_mcp/src/ale_aos_mcp/: __main__.py  server.py
aos_mcp/src/ale_aos_mcp/data/: mcp_tools.yaml
aos_mcp/src/aos_mcp/: server.py
aos_ssh/: Dockerfile  README.md  justfile  pyproject.toml
aos_ssh/data/: aos copy.json  aos-ssh-conf.yaml  aos-ssh-host-brest.json  aos-ssh-host.json  aos.json
aos_ssh/src/ale_aos_ssh/: __init__.py  device_manager.py  server.py  ssh_session_manager.py
aos_ssh/src/aos_ssh/: device_manager.py  server.py  ssh_session_manager.py
client/: .gitignore  README.md  pyproject.toml
client/.cursor/: mcp.json
client/.gemini/: settings.json
client/src/ale_aos_client/: __init__.py  __main__.py  client.py
deploy/: docker-compose.yaml
deploy/data/: aos-ssh-host.json  aos.json  mcp_tools.yaml
pictures/: ala_aos_mcp.drawio
