[project]
name = "ale_aos_mcp"
dynamic = ["version"]
description = "ALE AOS mcp server"
readme = "README.md"
authors = [
    { name = "foricher", email = "christian.foricher@al-enterprise.com" }
]
requires-python = ">=3.12"
keywords = ["aos", "ssh", "mcp", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.12.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
]

dev-dependencies = [
    "hatchling"
]

[project.scripts]
ale_aos_mcp = "ale_aos_mcp:main"

[tool.uv]
default-groups = ["dev",]
required-version = ">=0.7.2"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "(?P<version>.+)"

[project.urls]
Repository = "https://github.com/foricher/aos-mcp"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src/ale_aos_mcp"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["README.md"]

[tool.ruff.format]
# quote-style = "single"
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E",        # pycodestyle
    "F",        # pyflakes
    "FAST001",  # FastAPI route with redundant response_model argument
    "FAST002",  # FastAPI dependency without Annotated
    "FAST003",  # Parameter {arg_name} appears in route path, but not in {function_name} signature
    "I",        # isort
    "PERF",     # Perflint
    "PL",       # Pylint
    "UP",       # pyupgrade
]
ignore = ["PERF203", "PLC0415", "PLR0402"]
mccabe.max-complexity = 24  # Default is 10

# [tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 10           # Default is 5
max-branches = 13       # Default is 12
max-returns = 11        # Default is 6
max-statements = 60     # Default is 50