[project]
name = "ale_aos_client"
dynamic = ["version"]
description = "ALE AOS MCP Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.5",
    "certifi>=2025.10.5",
    "fastmcp>=2.12.4",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "openapi-core>=0.19.5",
    "openapi-pydantic>=0.5.1",
    "openapi-schema-validator>=0.6.3",
    "openapi-spec-validator>=0.7.2",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sse-starlette>=3.0.2",
    "starlette<=0.48.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
ale_aos_client = "ale_aos_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev",]
required-version = ">=0.7.2"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.8.5",
]

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "(?P<version>.+)"

[project.urls]
Repository = "https://github.com/foricher/aos-mcp"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src/ale_aos_client"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["README.md"]

[tool.ruff.format]
# quote-style = "single"
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "C4",       # flake8-comprehensions
    "C90",      # mccabe
    "E",        # pycodestyle
    "F",        # pyflakes
    "FAST001",  # FastAPI route with redundant response_model argument
    "FAST002",  # FastAPI dependency without Annotated
    "FAST003",  # Parameter {arg_name} appears in route path, but not in {function_name} signature
    "I",        # isort
    "PERF",     # Perflint
    "PL",       # Pylint
    "UP",       # pyupgrade
]
ignore = ["PERF203", "PLC0415", "PLR0402"]
mccabe.max-complexity = 24  # Default is 10

# [tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 10           # Default is 5
max-branches = 13       # Default is 12
max-returns = 11        # Default is 6
max-statements = 60     # Default is 50